append icon z-index fixed

--- a/src/AmountInput/AmountInput.module.css
+++ b/src/AmountInput/AmountInput.module.css
@@ -82,7 +82,6 @@
   position: absolute;
   color: var(--rfe-color);
   top: 50%;
-  z-index: 1;
   transform: translateY(-50%);
   display: flex;
   align-items: center;
